--- a/style/style.css
+++ b/style/style.css
@@ -198,4 +198,102 @@ html, body {
     z-index: 2;
 }
 
+@media screen and (max-width: 768px) {
+  .left-col,
+  .right-col,
+  .left-col1,
+  .right-col1 {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 10px !important;
+  }
 
+  .logo {
+    width: 180px;
+    height: auto;
+    margin: 10px 0;
+  }
+
+  .nav1 {
+    flex-direction: column;
+    gap: 15px;
+    padding-right: 0;
+    padding-top: 10px;
+  }
+
+  .cont-img i {
+    font-size: 1.5rem;
+    width: 40px;
+    height: 40px;
+  }
+
+  .cont-img .bi-chevron-left,
+  .cont-img .bi-chevron-right {
+    left: 20px;
+    right: 20px;
+  }
+
+  .cont-img .flecha-arriba {
+    left: unset;
+    right: 20px;
+    bottom: 100px;
+  }
+
+  .ver {
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 150px;
+    padding: 12px 16px;
+    font-size: 14px;
+  }
+
+  footer {
+    padding: 15px;
+    font-size: 0.95rem;
+  }
+
+  .footer-cont {
+    padding: 0 15px;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .cont-img .bi-chevron-left {
+    left: 10px;
+  }
+
+  .cont-img .bi-chevron-right {
+    right: 10px;
+  }
+
+  .cont-img .flecha-arriba {
+    right: 10px;
+    bottom: 80px;
+  }
+
+  .ver {
+    bottom: 120px;
+    font-size: 13px;
+  }
+
+  .red-titulo {
+    margin-left: 0;
+    margin-right: 0;
+    justify-content: center;
+  }
+
+  .redes {
+    justify-content: center;
+    gap: 10px;
+  }
+
+  .nav1 a, .nav1 select {
+    font-size: 13px;
+  }
+
+  .footer-cont .unico {
+    font-size: 0.95rem;
+  }
+}
